[package]
name = "wuffblob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.19.0"
azure_storage = "0.19.0"
azure_storage_blobs = "0.19.0"
azure_storage_datalake = "0.19.0"
clap = { version = "4.4.18", features = ["env"] }
futures = "0.3.30"
regex = "1.10.3"
tokio = { version = "1.36.0", features = ["io-util", "net", "process", "rt", "signal", "sync", "time"] }
