[package]
name = "wuffblob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.19.0"
azure_storage = "0.19.0"
azure_storage_blobs = "0.19.0"
azure_storage_datalake = "0.19.0"
base64 = "0.21.7"
clap = { version = "4.4.18", features = ["env"] }
futures = "0.3.30"
md-5 = "0.10.6"
rand = "0.8.5"
regex = "1.10.3"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["io-util", "net", "process", "rt", "signal", "sync", "time"] }
